--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-10-brandshop-client",
+  "name": "assignment-9",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,26 +11,24 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "firebase": "^10.5.0",
+    "axios": "^1.5.1",
+    "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.1",
     "react-icons": "^4.11.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.17.0",
-    "react-super-responsive-table": "^5.2.2",
+    "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.32"
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^3.9.3",
+    "daisyui": "^3.9.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
